[package]
name = "disk-hog-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
sha2 = "0.10.8"  # Add for checksums
filetime = "0.2.23"  # Add for timestamp preservation
log = "0.4"
env_logger = "0.11.6"

[dev-dependencies]
tempfile = "3.10.1"  # For temporary test directories

